# project-interview-setup

./: .gitignore  Makefile  README.md
backend/: app.py  init_db.py  pyproject.toml  run_worker.py
backend/src/db/: base.py
backend/src/workflow/: hello_activities.py  hello_workflow.py
docs/plans/: 2026-03-05-hello-world-setup-design.md  2026-03-05-hello-world-setup-plan.md
frontend/: next.config.js  package.json
frontend/pages/: _app.tsx  index.tsx
