[project]
name = "backend"
version = "0.1.0"
description = "Interview setup — hello world backend"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask[async]>=3.1.0",
    "flask-cors>=5.0.1",
    "python-dotenv>=1.1.0",
    "sqlalchemy==2.0.36",
    "pydantic>=2.0.0",
    "temporalio>=1.10.0",
]
